; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/opengl32/extr_swimpl.c_sw_ReleaseContext.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/opengl32/extr_swimpl.c_sw_ReleaseContext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sw_context = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sw_ReleaseContext(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.sw_context*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.sw_context*
  store %struct.sw_context* %5, %struct.sw_context** %3, align 8
  %6 = call i32 @gl_make_current(i32* null, i32* null)
  %7 = load %struct.sw_context*, %struct.sw_context** %3, align 8
  %8 = getelementptr inbounds %struct.sw_context, %struct.sw_context* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %1
  %12 = load %struct.sw_context*, %struct.sw_context** %3, align 8
  %13 = getelementptr inbounds %struct.sw_context, %struct.sw_context* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @UnhookWindowsHookEx(i32* %14)
  %16 = load %struct.sw_context*, %struct.sw_context** %3, align 8
  %17 = getelementptr inbounds %struct.sw_context, %struct.sw_context* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  br label %18

18:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @gl_make_current(i32*, i32*) #1

declare dso_local i32 @UnhookWindowsHookEx(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
